Fixed logo stretch in navbar

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,4 +1,5 @@
 .logo-img {
+  width: unset;
   margin: -10px 10px -10px -10px;
   height: 30px;
 }
